# Amni-Code

./: .gitignore  Cargo.toml  LICENSE  README.md  amni-launcher.cmd  architecture_map.md  changelog.md  install-gui.ps1  install.bat  install.py  install_gui.py  quickstart.bat  run.bat  server.py  start_local_server.bat  test.ps1  tutorial.md
archive/: checklist_ide_upgrade.md  checklist_ide_v2.1_ai_suggestions.md  checklist_interrupt_steer_v2.4.0.md  checklist_v2.2.0_concurrent_sessions.md  checklist_v2.2.0_installer_i18n_split.md  checklist_v2.3.0_smart_amni_cmd.md  guardian_council_v2.2.0_installer_i18n_split.md
backups/: App.css.bak.v1  App.tsx.bak.v0.1.3  App.tsx.bak.v1  App.tsx.bak.v2  GUARDIAN_COUNCIL_grok_computer_use.md  GUARDIAN_COUNCIL_rust_rewrite.md  README.md.bak.v3  architecture_map.md.bak.2.2  architecture_map.md.bak.v2  architecture_map.md.interrupt_steer.bak.v2.4.0  changelog.md.bak.2.2  changelog.md.bak.v2  changelog.md.interrupt_steer.bak.v2.4.0  checklist_backend_combined_launch.md  checklist_full_computer_use_grok_agent.md  checklist_model_api_enter.md  checklist_v0.2.0_rust_rewrite.md  copilot-agent-features.md  index.html.bak.2.2  main.rs.bak.2.2  main.rs.interrupt_steer.bak.v2.4.0  package.json.bak.v1  server.py.bak.v2  tools.py.bak.v1  v1.1.0_index.html.bak  v2.0.0_index.html.bak  v2.0.0_main.rs.bak
frontend/: README.md  package-lock.json  package.json
installer/: Cargo.toml
installer/src/: main.rs
installer/static/: installer.html
packaging/: build-all.sh
src/: main.rs
static/: app.js  index.html  patch.js  style.css
(+18 files in other folders)
