[package]
name = "amni-installer"
version = "2.2.0"
edition = "2021"
[[bin]]
name = "amni-installer"
path = "src/main.rs"
[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
open = "5"
futures = "0.3"
tokio-stream = "0.1"
tao = "0.32"
wry = "0.47"
async-stream = "0.3"
dirs = "5"
